tests/paczka1/fuzzy1/89737832.err
Error in line 3: wLWusO A432 +3,0
Error in line 9: A278 A713 6,6
Error in line 12: A278 A278 48,7
Error in line 14: A278 S92 27,4
Error in line 15: A278 A278 44,3
Error in line 21: NjP5QfkFY A432 73,1
Error in line 22: NjP5QfkFY S92 52,2
Error in line 23: NjP5QfkFY A713 53,4
Error in line 10: wLWusO A432 152,7
Error in line 13: GggCrgLmkP A713 83,1
Error in line 28: wLWusO A278 87,2
Error in line 29: GggCrgLmkP A432 3,6
Error in line 31: GggCrgLmkP A713 94,3
